# Agent-Gantry

./: .gitignore  CHANGELOG.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PR_REVIEW_RESPONSE.md  PUBLISHING.md  QUICK_REFERENCE.md  README.md  REFACTORING_REPORT.md  plan.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: 01-advanced-routing-orchestration.md  02-enterprise-security-governance.md  03-frictionless-onboarding.md  04-developer-experience-ui.md  05-smart-learning.md  06-state-management.md  README.md  bug_report.md  config.yml  general_feature_request.md
.github/workflows/: ci.yml  publish.yml
agent_gantry/: README.md  __init__.py
agent_gantry/adapters/: README.md  __init__.py  llm_client.py
agent_gantry/cli/: README.md  __init__.py  __main__.py  main.py
agent_gantry/core/: README.md  __init__.py  context.py  executor.py  gantry.py  mcp_registry.py  mcp_router.py  rate_limiter.py  registry.py  router.py  security.py  utils.py
agent_gantry/integrations/: README.md  __init__.py  anthropic_features.py  anthropic_skills.py  decorator.py  framework_adapters.py  semantic_tools.py
agent_gantry/metrics/: README.md  __init__.py  token_usage.py
agent_gantry/observability/: README.md  __init__.py  console.py  opentelemetry_adapter.py  telemetry.py
agent_gantry/providers/: README.md  __init__.py  a2a_client.py
agent_gantry/schema/: README.md  __init__.py  a2a.py  mcp.py  (+7 more)
docs/: DOCUMENTATION_UPDATE_SUMMARY.md  README.md  _config.yml  cli.md  configuration.md  dynamic_mcp_selection.md  getting-started.md  index.md  issue_template_implementation.md  llm_sdk_compatibility.md  local_persistence_and_skills.md  phase2.md  phase5_mcp.md  phase6_a2a.md  semantic_tool_decorator.md  semantic_tool_decorator_OLD.md  troubleshooting.md  vector_store_llm_integration.md
examples/: README.md  a2a_integration_demo.py  claude_desktop_config.json  fast_track_demo.py  llm_intent_classification_example.py  mcp_integration_demo.py
tests/: README.md  __init__.py  conftest.py  test_anthropic_features.py  test_anthropic_skills.py  test_decorator.py  test_dynamic_mcp_selection.py  test_examples_agent_frameworks.py  test_framework_adapters.py  test_gantry.py  test_lancedb_nomic.py  test_llm_intent_classification.py  test_llm_sdk_compatibility.py  test_new_features.py  test_observability_token_usage.py  test_performance_benchmarks.py  test_phase2.py  test_phase3_routing.py  test_phase4_adapters.py  test_phase5_mcp.py  test_phase6_a2a.py  test_refactoring_improvements.py  test_retrieval.py  test_semantic_tools.py  test_token_savings_and_accuracy.py  test_tool.py  test_tool_spec_adapters.py
(+113 files in other folders)
